--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-teste></app-teste>
+<app-second-component></app-second-component>
+<app-third-component></app-third-component>
 <router-outlet/>
