--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-teste></app-teste>
 <app-second-component></app-second-component>
 <app-third-component></app-third-component>
+<app-forth-component></app-forth-component>
 <router-outlet/>
