--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,89 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #f9f9f9;
+    margin: 0;
+    padding: 20px;
+    color: #333;
+  }
+  
+  h2 {
+    color: #e84c26;
+    border-bottom: 2px solid #e84c26;
+    padding-bottom: 5px;
+    margin-top: 30px;
+  }
+
+  input, select {
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    width: 100%;
+    max-width: 300px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    transition: 0.3s;
+  }
+  
+  input:focus, select:focus {
+    outline: none;
+    border-color: #e84c26;
+  }
+  
+  button {
+    background-color: #e84c26;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 8px;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+  
+  button:hover {
+    background-color: #e73a2f;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  li {
+    background: white;
+    margin: 10px 0;
+    padding: 10px;
+    border-left: 5px solid #e84c26;
+    border-radius: 6px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .promocao {
+    background-color: #ffe0e0;
+    font-weight: bold;
+    color: #b40000;
+    border-left-color: #e30f43;
+  }
+  p {
+    margin: 5px 0;
+  }
+  
+  p:last-child {
+    font-weight: bold;
+    margin-top: 10px;
+  }
+
+  .required {
+    color: #d8000c;
+    background-color: #ffd2d2;
+    padding: 10px;
+    margin-top: 5px;
+    border-left: 4px solid #e30f43;
+    border-radius: 6px;
+    font-weight: 500;
+    font-size: 14px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+    animation: fadeIn
+  }
